<resources>
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="club_gallery_full">Has reached the club album capacity ceiling</string>
    <string name="ok">OK</string>
    <string name="app_name">SpeedX</string>
    <string name="empty" />
    <string name="network_not_awesome">Network Unavailable</string>
    <string name="server_error">Server error, please wait for a moment</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_success">Deleted</string>
    <string name="delete_err">Failed to delete</string>
    <string name="clear">Clear</string>
    <string name="loading_msg">Please wait&#8230;</string>
    <string name="authentication_copyright">Copyright © SpeedX Cycling Inc.</string>
    <string name="authentication_username_is_required">Please enter a nickname</string>
    <string name="authentication_email_is_required">Please enter an email</string>
    <string name="authentication_password_is_required">Please enter Password</string>
    <string name="authentication_email_not_registered">The email has not been registered</string>
    <string name="authentication_sent_password_reset_request_success">Email sent, please check your mailbox</string>
    <string name="authentication_3rdparty_title">Sign with a third party account</string>
    <string name="authentication_sign_up_fragment_nickname">Nickname</string>
    <string name="authentication_sign_up_fragment_password">Password</string>
    <string name="authentication_sign_up_fragment_sign_up">Sign up</string>
    <string name="authentication_event_sign_in">Sign in with Email</string>
    <string name="authentication_sign_up_fragment_already_have_an_account">Already have an account?</string>
    <string name="authentication_username_is_use_err">There is already an account associated with that username</string>
    <string name="authentication_sign_up_loading_msg">Loading&#8230;</string>
    <string name="authentication_sign_in_fragment_email">Email</string>
    <string name="authentication_sign_in_fragment_forget_password">Forgot Password</string>
    <string name="authentication_sign_in_fragment_sign_in">Sign in</string>
    <string name="authentication_sign_in_fragment_back_to_sign_up">Back to sign up</string>
    <string name="authentication_sign_in_err_unnetwork">network unavailable</string>
    <string name="authentication_sign_in_loading_msg">Loading&#8230;</string>
    <string name="activity_fragment_title">Cycling</string>
    <string name="activity_fragment_tab_map">Map</string>
    <string name="activity_fragment_event_click_start_riding">Start Cycling</string>
    <string name="activity_no_GPS_title">Friendly Reminder</string>
    <string name="activity_no_GPS_message">Your GPS is poor.</string>
    <string name="activity_alert_dialog_text_cancel">Cancel</string>
    <string name="activity_alert_dialog_text_ok">OK</string>
    <string name="activity_param_distance_default_value">0.00</string>
    <string name="activity_param_velocity_default_value">0.00</string>
    <string name="activity_param_elapsed_time_default_value">00:00:00</string>
    <string name="activity_param_label_distance">Distance</string>
    <string name="activity_param_label_distance_unit">km</string>
    <string name="activity_param_label_velocity">Speed(km/h)</string>
    <string name="activity_param_label_elapsed_time">Time</string>
    <string name="activity_param_label_velocity_unit">km/h</string>
    <string name="activity_param_label_speed">AVG Speed(km/h)</string>
    <string name="activity_param_label_calorie">Calories(kCal)</string>
    <string name="activity_state_label_start">Start</string>
    <string name="activity_state_label_pause">Pause</string>
    <string name="activity_state_label_resume">Resume</string>
    <string name="activity_state_label_finish">Finish</string>
    <string name="activity_state_label_finish_message">Activity Saved</string>
    <string name="activity_state_label_finish_error_message">This activity cannot be saved because the distance is too short.</string>
    <string name="label_i_know">OK</string>
    <string name="activity_max_speed_default_value">0.00</string>
    <string name="discovery_fragment_event">Cycling event</string>
    <string name="discovery_fragment_good_route">Routes</string>
    <string name="activity_watermark_tab_filter">Filter</string>
    <string name="activity_watermark_tab_sticker">Sticker</string>
    <string name="route_activity_title">Routes</string>
    <string name="routes_fragment_title">Routes</string>
    <string name="routes_fragment_difficulty_coefficient">Difficulty</string>
    <string name="routes_fragment_traffic_coefficient">Current Status:</string>
    <string name="routes_fragment_view_coefficient">Scenery:</string>
    <string name="routes_fragment_activity_total_distance">Distance</string>
    <string name="routes_fragment_total_distance">Distance:%1$s km</string>
    <string name="routes_fragment_total_distance_unit">km</string>
    <string name="routes_activity_wanted_go">Like</string>
    <string name="routes_activity_want_go">Liked</string>
    <string name="routes_fragment_followed">%1$sLiked</string>
    <string name="route_activity_view_introduction">Introduction</string>
    <string name="route_activity_comment_title">Comments(%1$s)</string>
    <string name="route_activity_comment_all">more</string>
    <string name="route_activity_comment_followed_err">network unavailable</string>
    <string name="route_activity_comment_followed_msg">You have already liked this</string>
    <string name="route_activity_comment_empty_msg">Please enter your comment</string>
    <string name="route_activity_comment_commit_sucess">Comment sent</string>
    <string name="route_activity_comment_commit_err">Failed to send your comment, please try again.</string>
    <string name="route_comment_activity_title">Comments(%1$s)</string>
    <string name="route_comment_exit_hint">Your comment&#8230;</string>
    <string name="route_comment_send">Send</string>
    <string name="route_comment_no_more">No more comments</string>
    <string name="route_elevation_activity_loading">Loading&#8230;</string>
    <string name="route_elevation_activity_error">Network unavailable, failed to get altitude data</string>
    <string name="route_self">Mine</string>
    <string name="rotue_self_activity_add">Add</string>
    <string name="route_self_activity_title">My Routes</string>
    <string name="route_self_activity_no_line">No route.</string>
    <string name="route_self_activity_add_first_line">Create your own routes.</string>
    <string name="route_self_activity_make">Getting Started</string>
    <string name="route_self_activity_use">Use</string>
    <string name="route_self_activity_used">Used</string>
    <string name="route_self_activity_make_route_to_map">Use a route</string>
    <string name="route_self_activity_use_success">Success! You can see the route on the "Cycling" tab.</string>
    <string name="route_map_make_activity_point_title">Points</string>
    <string name="route_map_make_activity_point_edit">Edit</string>
    <string name="route_map_make_activity_point_edit_finish">OK</string>
    <string name="route_map_make_activity_add_point">Add point</string>
    <string name="route_map_make_activity_save_points">Save</string>
    <string name="route_map_make_activity_distance_unit">km</string>
    <string name="route_map_make_activity_select_start_point">Select</string>
    <string name="route_map_make_activity_select_err">Failed to select the point, please try again</string>
    <string name="route_map_make_activity_plain_err_msg">Failed to create the route, please try again</string>
    <string name="route_map_make_activity_saving">Saving&#8230;</string>
    <string name="route_map_make_activity_plain">Creating&#8230;</string>
    <string name="route_map_search_edittext_hint">Search for place or address</string>
    <string name="route_map_activity_title">Details</string>
    <string name="route_map_activity_exit_dialog_msg">You haven\'t saved the route yet, still wish to exit?</string>
    <string name="route_map_activity_exit_dialog_ok">Exit</string>
    <string name="route_map_activity_exit_dialog_cancel">Cancel</string>
    <string name="route_map_activity_event_save_route">Save Route</string>
    <string name="profile_activity_title">Profile</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="profile_fragment_statistic_item_total_elapsed_time">Time(h)</string>
    <string name="profile_fragment_detailed_item_activities">Riding History</string>
    <string name="profile_fragment_action_button_tips">Settings</string>
    <string name="avatar_image_loading">Loading&#8230;</string>
    <string name="profile_fragment_edit_user_info">Edit</string>
    <string name="message_activity_title">SpeedX Help</string>
    <string name="ranking_fragment_title">Leaderboard</string>
    <string name="ranking_fragment_action_button_sort_by_month">Month</string>
    <string name="activity_finished_activity_cheat_title">Your speed is too high, we temporarily determined this data as fake.</string>
    <string name="activity_finished_activity_cheat_msg_title">We couldn\'t add the distance to the log:</string>
    <string name="activity_finished_activity_cheat_msg_1">Ranking List</string>
    <string name="activity_finished_activity_cheat_msg_2">Missions you have joined</string>
    <string name="activity_finished_activity_cheat_msg_0">Your Achievements</string>
    <string name="activity_finished_activity_complain">Appeal</string>
    <string name="about_activity_tutorial">Welcome Page</string>
    <string name="about_activity_wechat_label">WeChat Subscription</string>
    <string name="about_activity_wechat_value">野兽骑行</string>
    <string name="about_activity_qqgroup_label">QQ Group</string>
    <string name="about_activity_qqgroup_value">205195542</string>
    <string name="about_activity_weibo_label">Weibo</string>
    <string name="about_activity_weibo_value">\@SpeedX</string>
    <string name="ranking_fragment_menu_whole_country">Country</string>
    <string name="ranking_fragment_menu_safety_net">Global</string>
    <string name="ranking_fragment_menu_whole_area">Area</string>
    <string name="version_update_tv">Version</string>
    <string name="version_update_not_has_new">Is up-to-date</string>
    <string name="about_activity_qq_feedback_group_label">Discuss QQ Group</string>
    <string name="about_activity_qq_feedback_group_value">176125507</string>
    <string name="about_activity_customer_line_label">Phone</string>
    <string name="about_activity_customer_line_value">400&#8211;000&#8211;8333</string>
    <string name="about_activity_customer_email_label">Email</string>
    <string name="about_activity_customer_email_value">service@speedx.com</string>
    <string name="about_activity_service_email_label">Email</string>
    <string name="about_activity_service_email_value">support@speedx.com</string>
    <string name="about_activity_work_time">Working hours</string>
    <string name="about_activity_work_time_value">Monday to Friday 10:00&#8211;20:00</string>
    <string name="label_heart_rate_interval">heart rate interval</string>
    <string name="label_heart_rate_recovery_area">recovery</string>
    <string name="label_heart_rate_burning_fat_area">fat burning</string>
    <string name="label_heart_rate_train_area">training</string>
    <string name="label_heart_rate_anaerobic_area">anaerobic</string>
    <string name="label_heart_rate_limit_area">limit</string>
    <string name="label_heart_rate_desc_and_unit">heart rate limit (BPM)</string>
    <string name="label_heart_rate_customize">customization</string>
</resources>