<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/discover_color1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rank_fragment_view_country"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ranking_fragment_menu_whole_country"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/rank_fragment_view_province"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ranking_fragment_menu_whole_area"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/rank_fragment_view_net"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ranking_fragment_menu_safety_net"
        android:textColor="#fff" />

</LinearLayout>