<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efeff4"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efeff4"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_about_image"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/bg_activity_about"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_about_version_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:drawablePadding="15dp"
                android:gravity="center|bottom"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_about_list_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ffffff_with_border_top_bottom_1px_solid_1affffff"
            android:orientation="vertical"
            android:paddingLeft="23dp">

            <TextView
                android:id="@+id/activity_about_tutorial"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="15dp"
                android:drawableRight="@drawable/ic_item_arrow"
                android:gravity="center_vertical"
                android:paddingRight="15dp"
                android:text="@string/about_activity_tutorial"
                android:textColor="#444"
                android:textSize="@dimen/font_16"
                 />

            <View
                android:id="@+id/about_view"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_wechat_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_wechat_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_qqgroup_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_qqgroup_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_qq_feedback_group_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_qq_feedback_group_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_weibo_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/activity_about_enter_weibo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_weibo_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_customer_line_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_customer_line_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_customer_email_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_customer_email_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:id="@+id/about_activity_email_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_service_email_label"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_service_email_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/about_activity_divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/about_activity_work_time"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/about_activity_work_time_value"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14" />

            </RelativeLayout>







            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/activity_about_update_group"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/version_update_tv"
                    android:textColor="#444"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/activity_about_update_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="15dp"
                    android:text="@string/version_update_not_has_new"
                    android:textColor="#666"
                    android:textSize="@dimen/font_14"
                    android:drawablePadding="10dp"
                    />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>